# grep-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: hello.txt  output.txt
src/: main.rs
